# memalign-mcp

./: .gitignore  README.md  pyproject.toml
examples/: safety_judge.py  sample_feedback.jsonl
src/memalign_mcp/: __init__.py  __main__.py  alignment.py  config.py  embeddings.py  judge_manager.py  judgment.py  llm_client.py  memory_store.py  models.py  prompts.py  server.py
tests/: conftest.py  test_alignment.py  test_judge_manager.py  test_judgment.py  test_llm_client.py  test_memory_store.py  test_models.py  test_prompts.py  test_server_integration.py
