[project]
name = "memalign-mcp"
version = "0.1.0"
description = "MemAlign MCP Server - Dual-memory framework for aligning LLM judges with human feedback"
readme = {text = "MemAlign MCP Server - Dual-memory framework for aligning LLM judges with human feedback", content-type = "text/plain"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memalign_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
